fix service tests with dto